opml_cli/tests/snapshots/cli__missing_file.snap
---
source: opml_cli/tests/cli.rs
expression: output
---
error: The following required arguments were not provided:
  --file <FILE>
  --json
  --json-pretty

Usage: opml --file <FILE> --json --json-pretty --rss

For more information try '--help'

